@@ -19,62 +19,66 @@ import org.eclipse.swt.widgets.Shell;
 import org.eclipse.swt.widgets.Table;
 import org.eclipse.swt.widgets.TableItem;
 
+import com.gmail.aydinov.sergey.simple_debugger_plugin.dto.ui_dto.InnerElementRepresentationDTO;
 import com.gmail.aydinov.sergey.simple_debugger_plugin.dto.ui_dto.UserInstanceInnerElementInspectionDTO;
 import com.gmail.aydinov.sergey.simple_debugger_plugin.dto.ui_dto.UserInstanceInspectionDTO;
 
 public class TooltipManager {
-	
+
 	private static final int OFFSET_X = -100;
 	private static final int OFFSET_Y = OFFSET_X;
 	private static String GAP = "  ";
 	private static String SEPARATOR = "---------------------------------------------- \n";
 
-    private final Table table;
-    private final Composite root;
-    private Function<TableItem, String> tooltipProvider;
-    private Shell currentPopup;
+	private final Table table;
+	private final Composite root;
+	private Function<TableItem, String> tooltipProvider;
+	private Shell currentPopup;
 
-    public TooltipManager(Table table, Composite root) {
-        this.table = table;
-        this.root = root;
-        attachHoverListener();
-    }
+	public TooltipManager(Table table, Composite root) {
+		this.table = table;
+		this.root = root;
+		attachHoverListener();
+	}
 
-    /**
-     * Устанавливает функцию, которая возвращает текст тултипа для конкретного TableItem.
-     */
-    public void setTooltipProvider(Function<TableItem, String> tooltipProvider) {
-        this.tooltipProvider = tooltipProvider;
-    }
+	/**
+	 * Устанавливает функцию, которая возвращает текст тултипа для конкретного
+	 * TableItem.
+	 */
+	public void setTooltipProvider(Function<TableItem, String> tooltipProvider) {
+		this.tooltipProvider = tooltipProvider;
+	}
 
-    private void attachHoverListener() {
-        table.addListener(SWT.MouseHover, event -> {
-            TableItem item = table.getItem(new Point(event.x, event.y));
-            if (item == null) {
-                table.setToolTipText(null);
-                return;
-            }
-            String tip = null;
-            if (tooltipProvider != null) {
-                tip = tooltipProvider.apply(item);
-            }
-            table.setToolTipText(tip);
-        });
-    }
+	private void attachHoverListener() {
+		table.addListener(SWT.MouseHover, event -> {
+			TableItem item = table.getItem(new Point(event.x, event.y));
+			if (item == null) {
+				table.setToolTipText(null);
+				return;
+			}
+			String tip = null;
+			if (tooltipProvider != null) {
+				tip = tooltipProvider.apply(item);
+			}
+			table.setToolTipText(tip);
+		});
+	}
 
-    /**
-     * Получение индекса колонки по координате X (аналог getColumnIndexAtPoint из твоего класса)
-     */
-    public static int getColumnIndexAtPoint(Table table, int x) {
-        int offset = 0;
-        for (int i = 0; i < table.getColumnCount(); i++) {
-            offset += table.getColumn(i).getWidth();
-            if (x < offset) return i;
-        }
-        return table.getColumnCount() - 1;
-    }
-    
-    private Point adjustToScreen(Point desiredLocation, Point popupSize) {
+	/**
+	 * Получение индекса колонки по координате X (аналог getColumnIndexAtPoint из
+	 * твоего класса)
+	 */
+	public static int getColumnIndexAtPoint(Table table, int x) {
+		int offset = 0;
+		for (int i = 0; i < table.getColumnCount(); i++) {
+			offset += table.getColumn(i).getWidth();
+			if (x < offset)
+				return i;
+		}
+		return table.getColumnCount() - 1;
+	}
+
+	private Point adjustToScreen(Point desiredLocation, Point popupSize) {
 		Display display = root.getDisplay();
 		Rectangle screen = display.getPrimaryMonitor().getClientArea();
 		int x = desiredLocation.x;
@@ -93,8 +97,8 @@ public class TooltipManager {
 		}
 		return new Point(x, y);
 	}
-    
-    private void checkPopupCursor() {
+
+	private void checkPopupCursor() {
 		if (currentPopup == null || currentPopup.isDisposed())
 			return;
 		Display display = root.getDisplay();
@@ -110,8 +114,8 @@ public class TooltipManager {
 		}
 		display.timerExec(150, this::checkPopupCursor);
 	}
-    
-    public void showFieldInfoPopup(UserInstanceInspectionDTO userInstanceInspectionDTO, Point location) {
+
+	public void showFieldInfoPopup(UserInstanceInspectionDTO userInstanceInspectionDTO, Point location) {
 		Display display = root.getDisplay();
 		display.asyncExec(() -> {
 			if (root.isDisposed() || userInstanceInspectionDTO == null)
@@ -123,15 +127,15 @@ public class TooltipManager {
 			info.append("Field name: ").append(userInstanceInspectionDTO.getFieldName()).append("\n");
 			info.append("Field type: ").append(userInstanceInspectionDTO.getTypeName()).append("\n\n");
 			info.append("INFO: \n");
-				info.append("Fields: \n");
-				addGroupOfElements(info, userInstanceInspectionDTO.getInnerElementsByGroups().get(1),
-						List.of("name: ", "type: ", "value: "));
-				info.append("Metods: \n");
-				addGroupOfElements(info, userInstanceInspectionDTO.getInnerElementsByGroups().get(2),
-						new ArrayList<>(Arrays.asList("name: ", "return type: ", null)));
-				info.append("Others: \n");
-				addGroupOfElements(info, userInstanceInspectionDTO.getInnerElementsByGroups().get(3),
-						List.of("name: ", "type: ", "value: "));
+			info.append("Fields: \n");
+			addGroupOfElements(info, userInstanceInspectionDTO.getInnerElementsByGroups().get(1),
+					List.of("name: ", "type: ", "value: "));
+			info.append("Metods: \n");
+			addGroupOfElements(info, userInstanceInspectionDTO.getInnerElementsByGroups().get(2),
+					new ArrayList<>(Arrays.asList("name: ", "return type: ", null)));
+			info.append("Others: \n");
+			addGroupOfElements(info, userInstanceInspectionDTO.getInnerElementsByGroups().get(3),
+					List.of("name: ", "type: ", "value: "));
 			ScrolledComposite scrolled = new ScrolledComposite(popup, SWT.V_SCROLL | SWT.H_SCROLL);
 			scrolled.setLayoutData(new GridData(400, 300)); // размер окна
 			Composite content = new Composite(scrolled, SWT.NONE);
@@ -153,44 +157,39 @@ public class TooltipManager {
 			display.timerExec(150, this::checkPopupCursor);
 		});
 	}
-    
-    public void closePopup() {
+
+	public void closePopup() {
 		if (currentPopup != null && !currentPopup.isDisposed()) {
 			currentPopup.dispose();
 		}
 		currentPopup = null;
 	}
-    
-    private void addGroupOfElements(StringBuilder stringBuilder, List<UserInstanceInnerElementInspectionDTO> list,
+
+	private void addGroupOfElements(StringBuilder stringBuilder, List<UserInstanceInnerElementInspectionDTO> list,
 			List<String> markers) {
-		
+
 		for (int outer = 0; outer < list.size(); outer++) {
 			UserInstanceInnerElementInspectionDTO innerElement = list.get(outer);
 			for (int i = 0; i < markers.size(); i++) {
 				String announce = markers.get(i);
 				if (i == 0) {
-					Optional.ofNullable(announce)
-							.ifPresent(e -> stringBuilder.append(GAP)
-									.append(announce)
-									.append(innerElement.getName()).append("\n"));
+					Optional.ofNullable(announce).ifPresent(e -> stringBuilder.append(GAP).append(announce)
+							.append(innerElement.getName()).append("\n"));
 				} else if (i == 1) {
-					Optional.ofNullable(announce).ifPresent(
-							e -> stringBuilder.append(GAP)
-							.append(announce)
+					Optional.ofNullable(announce).ifPresent(e -> stringBuilder.append(GAP).append(announce)
 							.append(innerElement.getTypeOrReturnType()).append("\n"));
 				} else if (i == 2) {
-					Optional.ofNullable(announce).ifPresent(
-							e -> stringBuilder.append(GAP)
-							.append(announce)
+					Optional.ofNullable(announce).ifPresent(e -> stringBuilder.append(GAP).append(announce)
 							.append(innerElement.getValue()).append("\n"));
 				}
-				if (i == 2 && (list.size() - outer != 1)) stringBuilder.append("\n");
+				if (i == 2 && (list.size() - outer != 1))
+					stringBuilder.append("\n");
 			}
 		}
 		stringBuilder.append(SEPARATOR + "\n");
 	}
 
-	public void showTooltipForCollection(Point location) {
+	public void showTooltipForCollection(InnerElementRepresentationDTO dto, Point location) {
 		System.out.println("Hello!");
 		Display display = root.getDisplay();
 		display.asyncExec(() -> {
@@ -200,10 +199,15 @@ public class TooltipManager {
 			Shell popup = new Shell(root.getShell(), SWT.ON_TOP | SWT.TOOL);
 			popup.setLayout(new GridLayout(1, false));
 			StringBuilder info = new StringBuilder();
-			info.append("Collection: ").append("hello").append("\n");
-			
+		//	String size = (dto.getValue().substring(dto.getValue().lastIndexOf(":") + 1, dto.getValue().length())).
+					
+			info.append("Inspect element: ").append("\n").append(GAP).append("type: ").append(dto.getTypeOrReturnType())
+					.append("\n").append(GAP).append("name: ").append(dto.getElementName()).append("\n").append(GAP)
+					.append("size: ")
+					.append(dto.getValue().substring(dto.getValue().lastIndexOf(":") + 1, dto.getValue().length()))
+					.append("\n");
 			ScrolledComposite scrolled = new ScrolledComposite(popup, SWT.V_SCROLL | SWT.H_SCROLL);
-			scrolled.setLayoutData(new GridData(400, 300)); // размер окна
+			scrolled.setLayoutData(new GridData(400, 80)); // размер окна
 			Composite content = new Composite(scrolled, SWT.NONE);
 			content.setLayout(new GridLayout(1, false));
 			Label label = new Label(content, SWT.WRAP);
@@ -222,6 +226,6 @@ public class TooltipManager {
 			popup.addListener(SWT.Dispose, e -> currentPopup = null);
 			display.timerExec(150, this::checkPopupCursor);
 		});
-		
+
 	}
 }
